# student-database

./: .gitignore  CMakeLists.txt  README.md  requirements.md
src/: database.cpp  database.hpp  gender.hpp  main.cpp  main.ilk  student.cpp  student.hpp
